# ai-dm-saas

./: .cursorrules  .env  .env.example  .env.production  .env.production.example  .gitignore  CHANGELOG.md  CLAUDE.md  DEPLOYMENT.md  docker-compose.yml  package-lock.json  package.json  railway.json  vercel.json
.claude/agents/: api-designer.json  (+2 more)
backend/: .env.example  .env.production.example  .gitignore  CLAUDE.md  Dockerfile  alembic.ini  pyproject.toml  railway.json  railway.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_create_users_table.py  002_create_conversation_tables.py  e8f4b3c5d2a1_bridge.py
backend/src/: __init__.py  config.py  database.py  main.py  schemas.py
backend/src/ai_agent/: __init__.py  exceptions.py  graph.py  nodes.py  prompts.py  schemas.py  service.py
backend/src/auth/: dependencies.py  router.py  schemas.py  service.py
backend/src/conversations/: __init__.py  router.py  schemas.py  service.py
backend/src/ecommerce/: __init__.py  client.py  exceptions.py  schemas.py  tools.py
backend/src/instagram/: __init__.py  client.py  dependencies.py  exceptions.py  router.py  schemas.py  service.py
backend/src/models/: __init__.py  conversation.py  instagram_account.py  instagram_user.py  message.py  user.py
backend/tests/: conftest.py  test_ai_agent.py  test_auth.py  test_conversations.py  test_ecommerce.py  test_instagram.py  test_main.py
frontend/: .env.production.example  CLAUDE.md  Dockerfile  next.config.mjs  package-lock.json  package.json  railway.json  tailwind.config.ts  vercel.json
src/: middleware.ts
(+71 files in other folders)
