[project]
name = "ai-dm-automation-backend"
version = "0.1.0"
description = "AI DM Automation Backend"
authors = [
    {name = "AI DM Team"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.124.0",
    "uvicorn[standard]>=0.38.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.31.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.12.0",
    "python-jose[cryptography]>=3.5.0",
    "passlib[bcrypt]>=1.7.4",
    "alembic>=1.17.0",
    "python-multipart>=0.0.20",
    "httpx>=0.28.0",
    # AI Agent / LangGraph
    "langgraph>=0.2.0",
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest>=9.0.0",
    "pytest-asyncio>=1.3.0",
    "httpx>=0.28.0",
    "aiosqlite>=0.22.0",
]
